# personal-swiss-finance-dw

./: .gitignore  README.md  docker-compose-LocalExecutor-banking.yml  package-lock.json
examples/etl-banking/dags/: BEKB_account_staging.py  Viseca_reading_txt_file.py
examples/etl-banking/sql/: select_product.sql
src/: repo.py  requirements.txt  workspace.yaml
src/_archive/old_banking/: requirements.txt
src/banking/: pipelines.py  testing.py
src/banking/ops/: excel_reader.py  fetching.py
src/banking/resources/: resource_bekb.py
src/banking/run_config/: download_transactions.yaml
src/banking/types/: general.py  pandas.py
src/personal-finance-dwh/: Makefile  package-lock.json  package.json  pyproject.toml  setup.py
src/personal-finance-dwh/assets_dbt_python/: __init__.py
src/personal-finance-dwh/assets_dbt_python/assets/bekb_transactions/: __init__.py
src/personal-finance-dwh/assets_dbt_python/assets/forecasting/: __init__.py
src/personal-finance-dwh/assets_dbt_python_tests/: test_defs.py
src/personal-finance-dwh/dbt_project/config/: .user.yml  profiles.yml
src/personal-finance-dwh/dbt_project/models/: sources.yml
src/personal-finance-dwh/dbt_project/models/analytics/: spend_categorise.sql
src/personal-finance-dwh/dbt_project/models/cleaned/: categories_cleaned.sql  schema.yml  transactions_cleaned.sql
src/rill/: rill.yaml
src/rill/dashboards/: dashboard.yaml  personal_finance.yaml
src/rill/models/: distinct_nameOriginators.sql  model.sql
src/rill/sources/: categories.yaml  information_schema_tables.yaml  manual_categories_CSV.yaml  (+2 more)
(+13 files in other folders)
